fixed issue with size on mobile size modal

--- a/assets/less/griffin/styles.less
+++ b/assets/less/griffin/styles.less
@@ -218,7 +218,24 @@ h1, h2, h3, h4, h5, h6, strong, i {
 		}
 	}
 }
-
+@media (max-width: 480px)
+{
+	#modal {
+		position: fixed;
+		top: 3%;
+		right: 3%;
+		left: 3%;
+		bottom: 3%;
+		max-width: 325px !important;
+		margin: 0 !important;
+	}
+	#modal-body {
+		max-height: 500px;
+		padding: 15px;
+		overflow-y: auto;
+		-webkit-overflow-scrolling: touch;
+	}
+}
 @media (max-width: 980px) {
 	#logo {
 		img {
